# Courses

./: .gitignore  README.md
module_D/: pyproject.toml
module_D/D1/: pyproject.toml
module_D/D1/project/: db.sqlite3
module_D/D1/project_d1_2_4/: manage.py
module_D/D1/project_d1_2_5/: manage.py
module_D/D2/: tables.sql  task_d2_7_1.py
module_D/D2/McDonalds/: db.sqlite3  manage.py
module_D/D3/project/: db.sqlite3
module_D/D4/: db.sqlite3  pyproject.toml
module_D/D4/project/: settings.py  urls.py
module_D/D4/simpleapp/: filters.py  forms.py  models.py  urls.py  views.py
module_D/D4/templates/: product.html  product_create.html  product_delete.html  product_detail.html  product_list.html
module_D/D5/: db.sqlite3  pyproject.toml
module_D/D5/protect/: views.py
module_D/D5/sign/: models.py  urls.py
module_D/D5/simple_signup/: settings.py  urls.py
module_D/NewsPaper/: db.sqlite3  pyproject.toml
module_D/NewsPaper/NewsPaper/: settings.py  urls.py
module_D/NewsPaper/accounts/: admin.py  forms.py  models.py  urls.py  views.py
module_D/NewsPaper/news/: admin.py  context_processors.py  filters.py  forms.py  models.py  urls.py  views.py
module_D/NewsPaper/templates/: default.html  news_list.html  post_create.html  post_delete.html  post_detail.html  search_news.html
module_D/d1/: pyproject.toml
module_D/d1/task1_2_4/: manage.py
module_D/d1/task1_2_5/: db.sqlite3  manage.py
module_D/d2/: .McDonalds.py.kate-swp  McDonalds.py  McDonalds.sql
module_D/d3_d4/: db.sqlite3
module_D/d5/: db.sqlite3
module_D/d6/: db.sqlite3  manage.py
(+263 files in other folders)
